[gd_scene load_steps=15 format=2]

[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Fog3002.png" type="Texture" id=1]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Particle04_bokashistrong_hard.png" type="Texture" id=2]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/howaa128.png" type="Texture" id=3]
[ext_resource path="res://SISTEMA/EFECTOS/ESPECIALES/Efecto_llamas_que_caen.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.157895, 0.674342, 1 )
colors = PoolColorArray( 0.975098, 0.429626, 0.0457077, 1, 0.893066, 0.732634, 0.0418625, 1, 0.0823529, 0.0196078, 0.00392157, 0.117647 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.932954 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.369318 ), -1.16009, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=12]
trail_divisor = 3
emission_shape = 1
emission_sphere_radius = 60.0
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.6
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="Animation" id=10]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 16.18, 4.65, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:process_material:emission_sphere_radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 60.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:process_material:linear_accel")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "inicio_efecto"
length = 4.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:process_material:emission_sphere_radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:process_material:linear_accel")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 35.707, 33.7047 )

[node name="Efecto_llamas_que_caen" type="Particles2D"]
material = SubResource( 1 )
amount = 100
lifetime = 0.5
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 2 )
texture_scale = 0.55

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 16.18, 4.65, 0, 1 )
material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/inicio_efecto = SubResource( 11 )

[node name="AreaDetectarSuelos" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 528
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectarSuelos"]
shape = SubResource( 17 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.20921, -0.467712 )
scale = Vector2( 13.5809, 14.1422 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDetectarSuelos" to="." method="_on_AreaDetectarSuelos_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
